# EasyOp

./: .gitignore  CMakeLists.txt  README.md  build.py
.github/workflows/: ci.yml
cases/: easyop.py  test_easyop.py
libop/: CMakeLists.txt  libop.cpp
libop/background/Hook/: DisplayHook.cpp  HookExport.cpp  InputHook.cpp  kiero.cpp  kiero.h
libop/com/: op_i.c  op_i.h
swig/: CMakeLists.txt  easyop_wrap.cxx  genPythonWrap.bat  op.i  op_wrap.cxx
tests/: CMakeLists.txt
tools/: CMakeLists.txt  EasyCom.cpp
